Fix FormItemGroup height mismatch When only one Formitem inside a FormItemGroup has helpText, the one without stretches to the height of the Group, causing misalignment of Label and Input. This is fixed by aligning them with the top of the flex item

--- a/src/components/Form/FormItemGroup/form-item-group.css
+++ b/src/components/Form/FormItemGroup/form-item-group.css
@@ -1,7 +1,8 @@
 [data-form-item-group] {
-    display   : flex;
-    flex-wrap : wrap;
-    width     : 100%;
+    display     : flex;
+    flex-wrap   : wrap;
+    width       : 100%;
+    align-items : flex-start;
 
     input {
         align-self : flex-end;
